--- a/Kubernetes/Manifests/coolapi/2_deployment.yml
+++ b/Kubernetes/Manifests/coolapi/2_deployment.yml
@@ -17,4 +17,16 @@ spec:
         - name: "coolapi"
           image: "acrvvm2022.azurecr.io/coolapi:1.0.0"
           ports:
+          resources:
+            limits:
+              cpu: "1"
+            requests:
+              cpu: 500m
+            readinessProbe:
+              exec:
+            command:
+              - cat
+              - /tmp/healthy
+            initialDelaySeconds: 5
+            periodSeconds: 5
           - containerPort: 3000
